Created ServerModule1 and custom package dependencies; Edited settings and Afib_anal

--- a/anvil.yaml
+++ b/anvil.yaml
@@ -4,7 +4,11 @@ metadata: {description: BP Monitor & Analyzer, logo_img: 'asset:kag1.jpg', title
 name: MH
 package_name: MH
 renamed: true
-runtime_options: {client_version: '3', server_spec: null, server_version: python3-sandbox, version: 2}
+runtime_options:
+  client_version: '3'
+  server_spec: {base: python310-minimal}
+  server_version: python3-sandbox
+  version: 2
 services:
 - client_config: {}
   server_config: {}
