--- a/client_code/Filter/form_template.yaml
+++ b/client_code/Filter/form_template.yaml
@@ -1,5 +1,20 @@
 components:
 - components:
+  - layout_properties: {}
+    name: dd_year
+    properties:
+      margin: ['0', null, '0', null]
+    type: DropDown
+  - layout_properties: {}
+    name: dd_month
+    properties:
+      margin: ['0', null, '0', null]
+    type: DropDown
+  layout_properties: {grid_position: 'XWWLWJ,PDIWLM'}
+  name: flow_panel_3
+  properties: {}
+  type: FlowPanel
+- components:
   - event_bindings: {clicked: d_clicked}
     layout_properties: {grid_position: 'JJCFHV,HYAPCB'}
     name: d
