--- a/anvil.yaml
+++ b/anvil.yaml
@@ -13,6 +13,6 @@ services:
 - client_config: {}
   server_config: {}
   source: /runtime/services/tables.yml
-startup: {module: Afib_anal, type: form}
+startup: {module: Form1, type: form}
 startup_form: null
 uplink_visible: true
