--- a/client_code/Filter/form_template.yaml
+++ b/client_code/Filter/form_template.yaml
@@ -1,15 +1,14 @@
 components:
 - components:
   - layout_properties: {}
-    name: dd_year
+    name: cur_date
     properties:
+      format: '%Y/%m/%d'
       margin: ['0', null, '0', null]
-    type: DropDown
-  - layout_properties: {}
-    name: dd_month
-    properties:
-      margin: ['0', null, '0', null]
-    type: DropDown
+      placeholder: Date
+      spacing_above: none
+      spacing_below: none
+    type: DatePicker
   layout_properties: {grid_position: 'XWWLWJ,PDIWLM'}
   name: flow_panel_3
   properties: {}
