Edited Filter and Data

--- a/client_code/Filter/form_template.yaml
+++ b/client_code/Filter/form_template.yaml
@@ -1,6 +1,7 @@
 components:
 - components:
-  - layout_properties: {}
+  - event_bindings: {change: cur_date_change}
+    layout_properties: {}
     name: cur_date
     properties:
       format: '%Y/%m/%d'
