--- a/client_code/Analysis/form_template.yaml
+++ b/client_code/Analysis/form_template.yaml
@@ -108,7 +108,13 @@ components:
   name: content_panel
   properties: {background: 'theme:Primary Overlay 1', border: '', col_spacing: medium, col_widths: '{}', foreground: '', role: null, spacing_above: none, spacing_below: small, tooltip: '', visible: true, wrap_on: mobile}
   type: ColumnPanel
-- layout_properties: {slot: nav-right}
+- components:
+  - event_bindings: {click: afibs_click}
+    layout_properties: {}
+    name: afibs
+    properties: {text: AFIBS}
+    type: Button
+  layout_properties: {slot: nav-right}
   name: navbar_links
   properties: {}
   type: FlowPanel
