--- a/client_code/Afib_anal/form_template.yaml
+++ b/client_code/Afib_anal/form_template.yaml
@@ -1,8 +1,8 @@
 components:
 - components:
-  - layout_properties: {grid_position: 'NYGIRT,JQDUMB'}
+  - layout_properties: {full_width_row: true, grid_position: 'NYGIRT,JQDUMB'}
     name: column_panel_2
-    properties: {}
+    properties: {wrap_on: never}
     type: ColumnPanel
   - components:
     - components:
