--- a/client_code/Afib_anal/form_template.yaml
+++ b/client_code/Afib_anal/form_template.yaml
@@ -1,6 +1,6 @@
 components:
 - components:
-  - layout_properties: {full_width_row: true, grid_position: 'NYGIRT,JQDUMB'}
+  - layout_properties: {full_width_row: false, grid_position: 'NYGIRT,JQDUMB'}
     name: column_panel_2
     properties: {wrap_on: never}
     type: ColumnPanel
