--- a/client_code/Afib_anal/form_template.yaml
+++ b/client_code/Afib_anal/form_template.yaml
@@ -1,6 +1,6 @@
 components:
 - components:
-  - layout_properties: {full_width_row: false, grid_position: 'NYGIRT,JQDUMB'}
+  - layout_properties: {full_width_row: true, grid_position: 'NYGIRT,JQDUMB'}
     name: column_panel_2
     properties: {wrap_on: never}
     type: ColumnPanel
@@ -52,11 +52,11 @@ components:
         background: ''
         border: ''
         columns:
-        - {$$hashKey: 'object:165558', data_key: '', expand: false, id: LAVQQZ, title: date, width: 179}
+        - {$$hashKey: 'object:165558', data_key: '', expand: false, id: LAVQQZ, title: date, width: 133}
         - {$$hashKey: 'object:165559', data_key: '', expand: false, id: APQHOG, title: SYS, width: ''}
         - {$$hashKey: 'object:165560', data_key: '', id: GCJKIU, title: DIA}
         - {$$hashKey: 'object:165601', data_key: '', id: VZPVKB, title: PUL}
-        - {$$hashKey: 'object:165603', data_key: mean, expand: false, id: XTQSTS, title: MEAN, width: 55}
+        - {$$hashKey: 'object:165603', data_key: mean, expand: false, id: XTQSTS, title: MEAN, width: 69}
         - {$$hashKey: 'object:165605', data_key: '', expand: false, id: MDFTDB, title: afib, width: 67}
         foreground: ''
         role: tonal-data-grid
