Created Afib_anal.RowTemplate8; Edited Afib_anal

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -5,6 +5,7 @@ unique_ids:
     theme.css: XKNRN4SFF34IMREX52NQWF2Y6VCAGYB7
   forms:
     Afib_anal: '1750179524133428873232830.32385'
+    Afib_anal.RowTemplate8: '1761842348723992732438985.5905'
     Analysis: '1680084447214561735756029.2018'
     Analysis.RowTemplate3: '1695648857382540228643931.8167'
     Analysis.RowTemplate4: '1695648902122256107668545.70242'
