--- a/client_code/Afib_anal/form_template.yaml
+++ b/client_code/Afib_anal/form_template.yaml
@@ -1,6 +1,21 @@
 components:
 - components:
-  - layout_properties: {full_width_row: true, grid_position: 'NYGIRT,JQDUMB'}
+  - components:
+    - components:
+      - name: repeating_panel_2
+        properties: {item_template: Afib_anal.RowTemplate8}
+        type: RepeatingPanel
+      layout_properties: {grid_position: 'QJIIXX,VVOHIS'}
+      name: data_grid_2
+      properties:
+        columns:
+        - {data_key: year, expand: false, id: JKSDUP, title: Year, width: 117.46661376953125}
+        - {data_key: afibs, expand: false, id: VJQQOR, title: AFIBs, width: 108.2666015625}
+        - {data_key: minutes, expand: false, id: OJLQEN, title: Minutes, width: 147.6666259765625}
+        - {data_key: a11, id: BXYPIT, title: Index}
+        show_page_controls: false
+      type: DataGrid
+    layout_properties: {full_width_row: true, grid_position: 'NYGIRT,JQDUMB'}
     name: column_panel_2
     properties: {wrap_on: never}
     type: ColumnPanel
