--- a/client_code/Afib_anal/RowTemplate8/form_template.yaml
+++ b/client_code/Afib_anal/RowTemplate8/form_template.yaml
@@ -1,3 +1,45 @@
-components: []
-container: {type: DataRowPanel}
+components:
+- data_bindings:
+  - {code: 'self.item["year"]', property: text, writeback: false}
+  layout_properties: {column: JKSDUP}
+  name: label_1
+  properties:
+    role: 0height
+    spacing:
+      padding: ['0', null, '0', null]
+    text: ''
+  type: Label
+- data_bindings:
+  - {code: 'self.item[''afibs'']', property: text, writeback: false}
+  layout_properties: {column: VJQQOR}
+  name: label_2
+  properties:
+    align: center
+    role: 0height
+    spacing:
+      padding: ['0', null, '0', null]
+  type: Label
+- data_bindings:
+  - {code: 'self.item[''minutes'']', property: text, writeback: false}
+  layout_properties: {column: OJLQEN}
+  name: label_3
+  properties:
+    align: center
+    role: 0height
+    spacing:
+      padding: ['0', null, '0', null]
+  type: Label
+- data_bindings:
+  - {code: 'self.item[''aii'']', property: text, writeback: false}
+  layout_properties: {column: BXYPIT}
+  name: label_4
+  properties:
+    align: center
+    role: 0height
+    spacing:
+      padding: ['0', null, '0', null]
+  type: Label
+container:
+  properties: {role: 0height}
+  type: DataRowPanel
 is_package: true
