Edited Afib_anal, Afib_anal.RowTemplate8, Filter, Form1 and 1 more

--- a/client_code/Afib_anal/RowTemplate8/form_template.yaml
+++ b/client_code/Afib_anal/RowTemplate8/form_template.yaml
@@ -2,8 +2,9 @@ components:
 - data_bindings:
   - {code: 'self.item["year"]', property: text, writeback: false}
   layout_properties: {column: JKSDUP}
-  name: label_1
+  name: lb_year
   properties:
+    font_size: 18
     role: 0height
     spacing:
       padding: ['0', null, '0', null]
@@ -12,30 +13,36 @@ components:
 - data_bindings:
   - {code: 'self.item[''afibs'']', property: text, writeback: false}
   layout_properties: {column: VJQQOR}
-  name: label_2
+  name: lb_afibs
   properties:
-    align: center
+    align: left
+    font_size: 18
     role: 0height
     spacing:
       padding: ['0', null, '0', null]
+    text: '....'
   type: Label
 - data_bindings:
   - {code: 'self.item[''minutes'']', property: text, writeback: false}
   layout_properties: {column: OJLQEN}
-  name: label_3
+  name: lb_minutes
   properties:
     align: center
+    font_size: 18
     role: 0height
     spacing:
       padding: ['0', null, '0', null]
+    text: |
+      --.-
   type: Label
 - data_bindings:
   - {code: 'self.item[''aii'']', property: text, writeback: false}
   layout_properties: {column: BXYPIT}
-  name: label_4
+  name: lb_aii
   properties:
     align: center
-    role: 0height
+    font_size: 18
+    role: null
     spacing:
       padding: ['0', null, '0', null]
   type: Label
