--- a/client_code/Form1/RowTemplate1/form_template.yaml
+++ b/client_code/Form1/RowTemplate1/form_template.yaml
@@ -6,7 +6,7 @@ components:
   properties: {align: left, background: '', bold: false, border: '', font: '', font_size: 20, foreground: '', icon: '', icon_align: left, italic: false, role: null, spacing_above: none, spacing_below: none, text: '', tooltip: '', underline: false, visible: true}
   type: Label
 - data_bindings:
-  - {code: 'self.item['''']', property: text, writeback: false}
+  - {code: 'self.item["sys"]', property: text, writeback: false}
   layout_properties: {column: APQHOG}
   name: lb_2
   properties: {align: center, background: '', bold: false, border: '', font: '', font_size: 20, foreground: '', icon: '', icon_align: left, italic: false, role: null, spacing_above: none, spacing_below: none, text: '222', tooltip: '', underline: false, visible: true}
